Fixed the tablet spacing and removed the test images.

--- a/css/index.css
+++ b/css/index.css
@@ -155,6 +155,11 @@ nav a {
   font-size: 2.7rem;
   font-family: 'Yanone Kaffeesatz', sans-serif;
 }
+@media (max-width: 1000px) {
+  nav a {
+    font-size: 2.3rem;
+  }
+}
 nav img {
   border-radius: 8rem;
   width: 15rem;
@@ -571,12 +576,17 @@ address {
 }
 @media (max-width: 1000px) {
   .container .main-content .about-right .card img {
-    width: 30%;
+    width: 100%;
   }
 }
 @media (max-width: 500px) {
   .container .main-content .about-right .card img {
-    width: 100%;
+    width: 70%;
+  }
+}
+@media (max-width: 1000px) {
+  .container .main-content .about-right .card-img {
+    flex: 0 0 200px;
   }
 }
 .container .main-content .products {
@@ -621,7 +631,7 @@ address {
   }
 }
 .footer-content {
-  padding: 10rem;
+  padding: 10rem 20rem;
   display: flex;
   flex-direction: row;
   background-color: #86c232;
@@ -643,7 +653,7 @@ address {
   font-family: 'Yanone Kaffeesatz', sans-serif;
 }
 .footer-content .left-footer {
-  padding: 2rem 9rem;
+  padding: 2rem 5rem;
 }
 @media (max-width: 1000px) {
   .footer-content .left-footer {
@@ -660,7 +670,7 @@ address {
   color: #fff;
 }
 .footer-content .middle-footer {
-  padding: 2rem 9rem;
+  padding: 2rem 5rem;
 }
 @media (max-width: 500px) {
   .footer-content .middle-footer {
@@ -673,7 +683,7 @@ address {
   }
 }
 .footer-content .right-footer {
-  padding: 2rem 9rem;
+  padding: 2rem 5rem;
 }
 @media (max-width: 500px) {
   .footer-content .right-footer {
