--- a/less/footer.less
+++ b/less/footer.less
@@ -1,5 +1,5 @@
 .footer-content {
-    padding: @section-padding + 5rem;
+    padding: @section-padding + 5rem 20rem;
     display: flex;
     flex-direction: row;
     background-color: @header-footer;
