--- a/less/main-content.less
+++ b/less/main-content.less
@@ -202,8 +202,12 @@
 
 			.card img {
 				width: 30%;
-				@media @tablet {width: 30%;}
-				@media @mobile {width: 100%;}
+				@media @tablet {width: 100%;}
+				@media @mobile {width: 70%;}
+			}
+
+			.card-img {
+				@media @tablet {flex: 0 0 200px;}
 			}
 		}
 
