--- a/less/mixins.less
+++ b/less/mixins.less
@@ -4,5 +4,5 @@
 }
 
 .footer-articles () {
-	padding: 2rem 9rem;
+	padding: 2rem 5rem;
 }
